--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "module": "ESNext",                                /* Specify what module code is generated. */
      "rootDir": "./src",                                  /* Specify the root folder within your source files. */
      "moduleResolution": "Node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
+     //"sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
      "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
-     "sourceRoot": "/src",                                 /* Specify the root path for debuggers to find the reference source code. */
+     //"sourceRoot": "/src",                                 /* Specify the root path for debuggers to find the reference source code. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     /* Type Checking */
