--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-.yarn/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 .clj-kondo/
 .lsp/
@@ -8,5 +13,6 @@ original-lisp/
 
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
-!.yarn/cache
-#.pnp.*
+# Zero Installs (disabled)
+#!.yarn/cache
+.pnp.*
