removed ts-ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# !.yarn/patches
+# !.yarn/plugins
+# !.yarn/releases
+# !.yarn/sdks
+# !.yarn/versions
+.vscode/
 
 .clj-kondo/
 .lsp/
